Renaming and reset progress bar

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -8,12 +8,12 @@ import PeaceSign from "./PeaceSign.astro";
     <PeaceSign />
   </div>
 
-  <small>
-    {t("footerNoticeUnaffiliated")} SDC Wellington.
-  </small>
+  <!-- <small>
+    {t("footerNoticeUnaffiliated")} Mont Royal Pietonne.
+  </small> -->
 
   <small>
-    <a href="mailto:lawellpietonne@gmail.com">
+    <a href="mailto:montroyalpietonne@gmail.com">
       <strong aria-hidden="true">@</strong>
       {t("contactUs")}
     </a>
