--- a/src/components/StayConnected.astro
+++ b/src/components/StayConnected.astro
@@ -7,11 +7,11 @@ const lang = astroI18n.langCode;
 <h3>{t("onSocialMedia")}</h3>
 <p>
   {t("followUsOn")}
-  <a href="https://www.instagram.com/lawellpietonne/" target="_blank"
+  <a href="https://www.instagram.com/montroyalpietonne/" target="_blank"
     >Instagram</a
   >
   {t("and")}
-  <a href="https://www.facebook.com/lawellpietonne" target="_blank">Facebook</a
+  <a href="https://www.facebook.com/montroyalpietonne" target="_blank">Facebook</a
   >.
 </p>
 
