--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -15,13 +15,13 @@ const { langCode } = astroI18n;
 
 <Layout title={null}>
   <Header />
-  <main>
+  <!-- <main>
     <section>
       <h2>{t("completeHeading")}</h2>
       <p>
         {t("completeBody")}
       </p>
-    </section>
+    </section> -->
 
     <section id="progress-steps">
       <h2>{t("stepsHeading")}</h2>
