added mont royal svg

--- a/src/components/Logo.astro
+++ b/src/components/Logo.astro
@@ -4,7 +4,7 @@ import { t } from "astro-i18n";
 
 <h1 lang="fr">{t("siteName")}</h1>
 <img
-  src="/img/la-well-pietonne-logo.svg"
+  src="/img/mont-royal-logo.svg"
   alt="La Well Piétonne"
   aria-hidden="true"
   class="logo"
