Changing wellington to mont royal in QA and petition

--- a/src/components/HowToSign.astro
+++ b/src/components/HowToSign.astro
@@ -5,46 +5,46 @@ import HowToSignEventItem from "./HowToSignEventItem.astro";
 import { SigningLocation, SigningEvent } from "../../types";
 
 const locations: SigningLocation[] = [
-  {
-    name: "Chez Robin marché local",
-    href: "https://goo.gl/maps/2kjX6xBsVRTXp5vL6",
-    address: "3819 rue Wellington",
-  },
-  {
-    name: "Café Jardin",
-    href: "https://goo.gl/maps/fVEVmAE5ybt4dPSU9",
-    address: "4437 rue Wellington",
-  },
-  {
-    name: "Falafel Yoni",
-    href: "https://goo.gl/maps/7bsW9Fdf876qyhKW6",
-    address: "4549 rue Wellington",
-  },
-  {
-    name: "Boutique Brock Art",
-    href: "https://goo.gl/maps/iJfwvBPW1k5SNJ8E9",
-    address: "4835 rue Wellington",
-  },
-  {
-    name: "Atelier Wellington Cycle & Cie",
-    href: "https://goo.gl/maps/zYPU4yr1EuHeYWaz8",
-    address: "4136 rue Wellington",
-  },
-  {
-    name: "Pattes et Griffes",
-    href: "https://goo.gl/maps/htLeafPuvnZaEhSC7",
-    address: "4702 rue Wellington",
-  },
-  {
-    name: "La Mistinguette",
-    href: "https://goo.gl/maps/r68hMuXSrAWjrGj86",
-    address: "4537 rue Wellington",
-  },
-  {
-    name: "Alice & Theo",
-    href: "https://goo.gl/maps/K4XXE6bg9ijwNhuG6",
-    address: "3870 rue Wellington",
-  },
+  // {
+  //   name: "Chez Robin marché local",
+  //   href: "https://goo.gl/maps/2kjX6xBsVRTXp5vL6",
+  //   address: "3819 rue Wellington",
+  // },
+  // {
+  //   name: "Café Jardin",
+  //   href: "https://goo.gl/maps/fVEVmAE5ybt4dPSU9",
+  //   address: "4437 rue Wellington",
+  // },
+  // {
+  //   name: "Falafel Yoni",
+  //   href: "https://goo.gl/maps/7bsW9Fdf876qyhKW6",
+  //   address: "4549 rue Wellington",
+  // },
+  // {
+  //   name: "Boutique Brock Art",
+  //   href: "https://goo.gl/maps/iJfwvBPW1k5SNJ8E9",
+  //   address: "4835 rue Wellington",
+  // },
+  // {
+  //   name: "Atelier Wellington Cycle & Cie",
+  //   href: "https://goo.gl/maps/zYPU4yr1EuHeYWaz8",
+  //   address: "4136 rue Wellington",
+  // },
+  // {
+  //   name: "Pattes et Griffes",
+  //   href: "https://goo.gl/maps/htLeafPuvnZaEhSC7",
+  //   address: "4702 rue Wellington",
+  // },
+  // {
+  //   name: "La Mistinguette",
+  //   href: "https://goo.gl/maps/r68hMuXSrAWjrGj86",
+  //   address: "4537 rue Wellington",
+  // },
+  // {
+  //   name: "Alice & Theo",
+  //   href: "https://goo.gl/maps/K4XXE6bg9ijwNhuG6",
+  //   address: "3870 rue Wellington",
+  // },
 ];
 
 const events = [
