--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -45,7 +45,7 @@ const otherLangCodes = langCodes.filter(
     padding-bottom: var(--header-padding);
     margin-bottom: 2rem;
 
-    background-image: url("/img/header-static.webp");
+    background-image: url("/img/header-static.jpg");
     background-size: cover;
     background-position: center;
   }
