Accent colour and image tint

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -44,8 +44,8 @@ const otherLangCodes = langCodes.filter(
     color: white;
     padding-bottom: var(--header-padding);
     margin-bottom: 2rem;
-
-    background-image: url("/img/header-static.jpg");
+    background-image: linear-gradient(rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.5)), url("/img/header-static.jpg");
+    background-size: cover;
     background-size: cover;
     background-position: center;
   }
